# FinalProject_MD-Simulation

Mod01-elasticShock/: Allrun.sh
Mod01-elasticShock/PlotScript/: plotResults.py
Mod01-elasticShock/src/: CMakeLists.txt  a.out  functions.cpp  functions.hpp  particle.cpp  particle.hpp
Mod01-elasticShock/tests/src/: CMakeLists.txt  headOnCollisionTest.cpp  particleClassTest.cpp  rightAngleCollisionTest.cpp  threeParticleCollisionTest.cpp  vector2DTest.cpp
Mod02-domain/: Allrun.sh  CMakeLists.txt
Mod02-domain/PlotScript/: plotResults.py
Mod02-domain/src/: CMakeLists.txt  cloud.cpp  cloud.hpp  rectDomain.cpp  rectDomain.hpp  vector2D.cpp  vector2D.hpp  wall.cpp  wall.hpp
Mod02-domain/tests/: CMakeLists.txt
Mod02-domain/tests/src/: CMakeLists.txt  cloudClassTest.cpp  particleClassTest.cpp  particleDiffusionLargeTest.cpp  particleDiffusionTest.cpp  particleHitWallTest.cpp  rectDomainTest.cpp  wallTest.cpp
